<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ישראל היום</string>
    <string name="crime_title_hint">Title:</string>
    <string name="action_settings">Settings</string>
    <string name="stam_title">Stam</string>
    <string name="articles_title">Articles</string>
    <string name="main_title">ראשי</string>
    <string name="skip">דלג</string>
    
    <string name="loading">בטעינה...</string>
    
    <string name="showAgain">אל תראה את זה בפעם הבאה</string>
    <string name="runApp">דלג על ההוראות ועבור לאפליקציה</string>
    
    <string name="next_page">החלק ימינה ושמאלה כדי לקרוא את הוראות השימוש באפליקציה</string>
    
    <string name="help_title">טיפים לשימוש באפליקציה</string>
    <string name="tip"> </string>
    <string name="help_1">1. לחצו על הלוגו של "ישראל היום" או על מקש התפריט כדי להציג את הקטגוריות כ"תפריט עוגה"</string>
    <string name="help_2">2. גררו את האצבע לקטגוריה מסוימת כדי לראות את הכתבות המרכזיות</string>
    <string name="help_3">3. גררו את האצבע לכתבה כלשהיא ואז עזבו כדי לראות את הכתבה</string>
</resources>
